--- a/config/database.yml
+++ b/config/database.yml
@@ -15,14 +15,15 @@
 # gem 'pg'
 #
 default: &default
-  adapter: mysql2
+  adapter: postgresql
+  encoding: unicode
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
 
 development:
   <<: *default
-  database: grocery-data_2_development
+  database: grocery-data_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
